universe-apps/environments/prod/universe-watchdog/patch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: universe-watchdog
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    external-dns.alpha.kubernetes.io/hostname: universe-watchdog.universe.xyz
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-name: XYZDAO
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.org/client-max-body-size: "50m"
